--- a/2576 llms sagemaker.ipynb
+++ b/2576 llms sagemaker.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!huggingface-cli login --token YOUR_TOKEN"
+    "!huggingface-cli login --token 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"
    ]
   },
   {
@@ -373,7 +373,7 @@
     "    disable_output_compression = True,        # not compress output to save training time and cost\n",
     "    environment          = {\n",
     "                            \"HUGGINGFACE_HUB_CACHE\": \"/tmp/.cache\", # set env variable to cache models in /tmp\n",
-    "                            # \"HF_TOKEN\": \"REPALCE_WITH_YOUR_TOKEN\" # huggingface token to access gated models, e.g. llama 2\n",
+    "                            \"HF_TOKEN\": \"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\" # huggingface token to access gated models, e.g. llama 2\n",
     "                            }, \n",
     ")"
    ]
